--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE HTML>
+<html lang="en">
 
+<head>
+    <!-- Notre contenu de header -->
+
+
+    <script src="fighter.js"></script>
+    <script src="paladin.js"></script>
+</head>
+
+<body>
+    <!-- Notre contenu HTML -->
+</body>
+
+</html>
