--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <!-- Notre contenu de header -->
 
 
-    <script src="fighter.js"></script>
-    <script src="paladin.js"></script>
+    <script src="character.js"></script>
 </head>
 
 <body>
