--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
-
+    <link href="style.css" rel="stylesheet">
 <head>
+  
     <!-- Notre contenu de header -->
 
 
@@ -12,6 +13,9 @@
 
 <body>
     <!-- Notre contenu HTML -->
+
+
+
 </body>
 
 </html>
