--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE HTML>
 <html lang="en">
-    <link href="style.css" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
+
 <head>
-  
-    <!-- Notre contenu de header -->
-
-
     <script src="character.js"></script>
     <script src="game.js"></script>
     <script src="turn.js"></script>
 </head>
 
 <body>
-    <!-- Notre contenu HTML -->
-
-
-
+    <button onclick="myFunction()">Click me</button>
+    <script>
+        function myFunction() {
+            test = new Game;
+            test.newTurn();
+        }
+    </script>
 </body>
 
 </html>
