status and exit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button onclick="myFunction()">Click me</button>
+    <button class="favorite styled" onclick="myFunction()">Lancer une partie</button>
     <script>
         function myFunction() {
             test = new Game;
